<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.thetechnow.numfacts.Activity.BasicActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Functionality Type : "
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="50dp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_functionality"
        android:prompt="@string/prompt"
        android:entries="@array/functionality"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginTop="100dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_category_from_below"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/basic_trivia"
                android:background="@color/colorAccent"
                android:text="@string/trivia" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/basic_math"
                android:background="@color/colorAccent"
                android:text="@string/math" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/basic_date"
                android:background="@color/colorAccent"
                android:text="@string/date" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/basic_year"
                android:background="@color/colorAccent"
                android:text="@string/year" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
